[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameScene.gd" type="Script" id=1]
[ext_resource path="res://assets/font/NewShape-Book.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/font/NewShape-BoldOblique.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.266667, 0, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.764706, 0.752941, 0, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0, 0.984314, 1 )
custom_constants/shadow_offset_x = 8
text = "Guess the Number (1-100)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guess" type="Label" parent="."]
margin_left = 420.0
margin_top = 300.0
margin_right = 726.344
margin_bottom = 355.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.921569, 0, 0.976471, 1 )
custom_colors/font_color_shadow = Color( 0.764706, 0.752941, 0, 1 )
custom_constants/shadow_offset_x = 3
text = "Your guess:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBoxGuess" type="SpinBox" parent="."]
margin_left = 750.0
margin_top = 300.0
margin_right = 824.0
margin_bottom = 324.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tries" type="Label" parent="."]
margin_left = 485.0
margin_top = 400.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.898039, 0, 0.952941, 1 )
custom_colors/font_color_shadow = Color( 0.764706, 0.752941, 0, 1 )
custom_constants/shadow_offset_x = 3
text = "Tries left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBoxTries" type="SpinBox" parent="."]
margin_left = 750.0
margin_top = 400.0
margin_right = 824.0
margin_bottom = 424.0
rect_scale = Vector2( 3, 3 )

[node name="SpinBoxTool" type="SpinBox" parent="."]
visible = false
margin_left = 750.0
margin_top = 500.0
margin_right = 821.342
margin_bottom = 519.429
rect_scale = Vector2( 2, 2 )
[connection signal="value_changed" from="SpinBoxGuess" to="." method="_on_SpinBoxGuess_value_changed"]
